# nemo-agent

./: README.md  workflow.yaml
examples/basic/frameworks/background_agent/src/aiq_multi_frameworks/: __init__.py  brev_agent.py  github_agent.py  nemo_agent.py  register.py
examples/basic/frameworks/background_agent_v2/: pyproject.toml
examples/basic/frameworks/background_agent_v2/src/aiq_multi_frameworks/: __init__.py  embedding_functions.py  git_functions.py  github_agent.py  nemo_agent.py  register.py  test_search.py
examples/basic/frameworks/background_agent_v2/src/aiq_multi_frameworks/configs/: config.yml
examples/basic/frameworks/background_agents/src/aiq_multi_frameworks/: code_analysis_agent.py  github_agent.py  register.py
examples/basic/frameworks/background_agents_v3/: pyproject.toml
examples/basic/frameworks/background_agents_v3/src/aiq_multi_frameworks/: __init__.py  file_modification_agent.py
examples/basic/frameworks/multi_frameworks/src/aiq_multi_frameworks/: register.py
examples/basic/frameworks/multi_frameworks_copy/src/aiq_multi_frameworks/: ceo_agent.py  cto_agent.py  job_application_agent.py  jobs.json  langchain_research_tool.py  register.py
examples/basic/frameworks/yc_bot/: pyproject.toml
examples/blakes_bot/configs/: config.yml
examples/blakes_bot/src/blakes_bot/: blakes_bot_function.py
examples/blakes_bot/src/blakes_bot/configs/: config.yml
examples/text_file_ingest/: pyproject.toml
examples/text_file_ingest/configs/: config.yml
examples/text_file_ingest/src/text_file_ingest/: register.py  text_file_ingest_function.py
(+8 files in other folders)
